hphp/test/zend/bad/ext-gd/imagefilter_error15.php
<?php
$image = tmpfile();

var_dump(imagefilter($image, IMG_FILTER_CONTRAST, 2));
?>